--- a/FinalProj.ipynb
+++ b/FinalProj.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Final Project\n",
+    "# League Project\n",
     "\n",
     "For our project we wanted to attempt to predict the outcome of League of Legends games based on data available during the first half of matches. \n",
     "\n",
